# CloudGuard-Anomaly

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FEATURE_ANALYSIS_REPORT.md  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  SECURITY_FIXES_BATCH1.md  V4_IMPLEMENTATION_STATUS.md  VERSIONS_ROADMAP.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: README.md  env.py
alembic/versions/: 20241116_000001_initial_schema.py  20241116_000002_add_auth_tables.py  20251116_add_audit_logs_table.py  20251116_add_policies_table.py  20251116_hash_api_keys.py
cloudguard_anomaly/: __init__.py  config.py  middleware.py
cloudguard_anomaly/agents/: __init__.py  base_agent.py  drift_explainer_agent.py  misconfig_explainer_agent.py  remediation_planner_agent.py  risk_summarizer_agent.py
cloudguard_anomaly/ai/: __init__.py  threat_prioritization.py
cloudguard_anomaly/analysis/: __init__.py  advanced_attack_paths.py  attack_paths.py
cloudguard_anomaly/api/: __init__.py  swagger_config.py  validation.py
cloudguard_anomaly/api_security/: __init__.py  api_scanner.py
cloudguard_anomaly/auth/: __init__.py  decorators.py  models.py  password.py
cloudguard_anomaly/cicd/: __init__.py  pipeline.py
cloudguard_anomaly/ciem/: __init__.py  privilege_analyzer.py
cloudguard_anomaly/cli/: __init__.py  interactive.py  main.py  output.py
cloudguard_anomaly/compliance/: __init__.py  frameworks.py
cloudguard_anomaly/containers/: README.md  __init__.py  container_scanner.py  docker_scanner.py  vulnerability_db.py
cloudguard_anomaly/core/: __init__.py  engine.py  evaluator.py  incremental.py  loader.py  models.py  parallel.py
cloudguard_anomaly/dashboard/: __init__.py  app.py
cloudguard_anomaly/detectors/: __init__.py  drift_detector.py  identity_detector.py  misconfig_detector.py  (+1 more)
docs/: IMPLEMENTATION_COMPLETE.md  OPERATIONS.md  architecture.md
grafana/: README.md
k8s/: README.md
schemas/: finding_schema.json  report_schema.json  resource_schema.json
tests/: __init__.py  conftest.py  test_api.py  test_attack_paths.py  test_config.py  test_container_scanner.py  test_database.py  test_engine.py  test_iac_scanners.py  test_incremental_scanner.py  test_integration.py  test_monitoring_daemon.py  test_parallel_scanner.py  test_pdf_reporter.py  test_policy_sdk.py  test_security.py
(+106 files in other folders)
